--- a/src/index.njk
+++ b/src/index.njk
@@ -8,7 +8,7 @@ layout: 'base.njk'
   <div class="container flow">
       <div class="hero__content flow">
         <h1 class="section-title">Welcome to my blog!</h1>
-        <p>I use this blog to write about eveyrthing disability and accessibility in our world.</p>
+        <p>// This is my CSS Branch // I use this blog to write about eveyrthing disability and accessibility in our world.</p>
         <p>Below are some of my favourite articles, or you can go to the blog page to see my most recent posts.</p>
         <div class="flex-group">
           <a href="#featured-articles" class="btn btn--primary" role="button" aria-label="Featured Articles">Featured articles</a>
